--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "^13.1.6",
+    "@react-spring/web": "^9.7.1",
+    "framer-motion": "^10.10.0",
     "keen-slider": "^6.8.5",
     "next": "13.1.6",
     "nodemailer": "^6.9.1",
@@ -20,6 +26,7 @@
     "react-p5": "^1.3.33",
     "react-p5-wrapper": "^4.1.0",
     "react-youtube": "^10.1.0",
-    "yet-another-react-lightbox": "^2.4.3"
+    "yet-another-react-lightbox": "^2.4.3",
+    "zustand": "^4.3.7"
   }
 }
