--- a/package.json
+++ b/package.json
@@ -14,18 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@next/font": "^13.1.6",
-    "@react-spring/web": "^9.7.1",
+    "bootstrap": "^5.2.3",
     "framer-motion": "^10.10.0",
     "keen-slider": "^6.8.5",
+    "mdb-react-ui-kit": "^6.0.0",
     "next": "13.1.6",
     "nodemailer": "^6.9.1",
     "p5": "^1.6.0",
     "react": "18.2.0",
-    "react-confirm-alert": "^3.0.6",
     "react-dom": "18.2.0",
-    "react-p5": "^1.3.33",
-    "react-p5-wrapper": "^4.1.0",
-    "react-youtube": "^10.1.0",
+    "sharp": "^0.32.1",
     "yet-another-react-lightbox": "^2.4.3",
     "zustand": "^4.3.7"
   }
